--- a/CarGallery/Domain/Views/FilterUserControl.xaml
+++ b/CarGallery/Domain/Views/FilterUserControl.xaml
@@ -23,7 +23,6 @@
                 </i:Interaction.Triggers>
             </ComboBox>
         </WrapPanel>
-
         <WrapPanel Margin="0,0,0,20">
             <Label Content="Ban Novu " 
                    FontSize="25"
@@ -39,7 +38,6 @@
                 </i:Interaction.Triggers>
             </ComboBox>
         </WrapPanel>
-
         <WrapPanel Margin="0,0,0,20">
             <Label Content="Reng "
                    FontSize="25"
@@ -57,6 +55,21 @@
             </ComboBox>
         </WrapPanel>
         <WrapPanel Margin="0,0,0,20">
+            <Label Content="Yanacaq Növü " 
+                   FontSize="25"
+                   FontFamily="comic sans ms"></Label>
+            <ComboBox Name="petrolTypeCmbbx"
+                      FontSize="25"
+                      Width="200"
+                      Margin="10,4,0,4">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="SelectionChanged">
+                        <i:InvokeCommandAction Command="{Binding PetrolTypeComboBoxSelectionChanged}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+            </ComboBox>
+        </WrapPanel>
+        <WrapPanel Margin="0,0,0,20">
             <Label Content="Yurus "
                    FontSize="25"
                    FontFamily="comic sans ms"
@@ -69,7 +82,6 @@
                      Width="50"
                      FontSize="20"
                      Margin="10,4,0,4">
-                
             </TextBox>
             <Label Content="max"
                    FontSize="15"
@@ -79,7 +91,6 @@
                      Width="50"
                      FontSize="20"
                      Margin="10,4,0,4">
-                
             </TextBox>
         </WrapPanel>
         <WrapPanel Margin="0,0,0,20">
@@ -95,7 +106,6 @@
                      Width="50"
                      FontSize="20"
                      Margin="10,4,0,4">
-           
             </TextBox>
             <Label Content="max"
                    FontSize="15"
@@ -105,7 +115,6 @@
                      Width="50"
                      FontSize="20"
                      Margin="10,4,0,4">
-       
             </TextBox>
         </WrapPanel>
         <WrapPanel Margin="0,0,0,20">
@@ -118,48 +127,6 @@
                          Content=" Old "
                          FontSize="15"
                          Margin="10,4,0,4"></RadioButton>
-        </WrapPanel>
-        <WrapPanel Margin="0,0,0,20">
-            <CheckBox x:Name="benzinCheckBox"
-                      VerticalAlignment="Center"
-                      FontSize="100"
-                      Margin="10,4,0,4"></CheckBox>
-            <Label Content="Benzin"
-                   VerticalContentAlignment="Bottom"
-                   FontSize="15"
-                   FontFamily="comic sans ms"></Label>
-            <CheckBox x:Name="dizelCheckBox"
-                      VerticalAlignment="Center"
-                      FontSize="15"
-                      Margin="10,4,0,4"></CheckBox>
-            <Label Content="Dizel"
-                   VerticalContentAlignment="Bottom"
-                   FontSize="15"
-                   FontFamily="comic sans ms"></Label>
-            <CheckBox x:Name="hybridCheckBox"
-                      VerticalAlignment="Center"
-                      FontSize="15"
-                      Margin="10,4,0,4"></CheckBox>
-            <Label Content="Hybrid"
-                   VerticalContentAlignment="Bottom"
-                   FontSize="15"
-                   FontFamily="comic sans ms"></Label>
-            <CheckBox x:Name="gasCheckBox"
-                      VerticalAlignment="Center"
-                      FontSize="15"
-                      Margin="10,4,0,4"></CheckBox>
-            <Label Content="Gas"
-                   VerticalContentAlignment="Bottom"
-                   FontSize="15"
-                   FontFamily="comic sans ms"></Label>
-            <CheckBox x:Name="electroCheckBox"
-                      VerticalAlignment="Center"
-                      FontSize="15"
-                      Margin="10,4,0,4"></CheckBox>
-            <Label Content="Electro"
-                   VerticalContentAlignment="Bottom"
-                   FontSize="15"
-                   FontFamily="comic sans ms"></Label>
         </WrapPanel>
         <Button Content="Axtar"
                 FontSize="30"
